// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insetBlock renders 0 1`] = `
Array [
  .c0 {
  inset-block: 0;
}

<div
    className="c0"
  />,
  .c0 {
  inset-block: 0;
}

<div
    className="c0"
  />,
  .c0 {
  inset-block: 0;
}

<div
    className="c0"
  />,
  .c0 {
  inset-block: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`insetBlock renders function 1`] = `
Array [
  .c0 {
  inset-block: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  inset-block: has;
}

<div
    className="c0"
  />,
  .c0 {
  inset-block: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  inset-block: has;
}

<div
    className="c0"
  />,
]
`;

exports[`insetBlock renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-inset-block: invalid.path.1;
  -ms-inlrock: invalid.path.1;
  inset-block: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block: invalid.path.1;
  -ms-inlrock: invalid.path.1;
  inset-block: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block: invalid.path.1;
  -ms-inlrock: invalid.path.1;
  inset-block: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-inset-block: invalid.path.1;
  -ms-inlrock: invalid.path.1;
  inset-block: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`insetBlock renders negative number 1`] = `
Array [
  .c0 {
  inset-block: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  inset-block: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  inset-block: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  inset-block: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`insetBlock renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  inset-block: July;
}

@media screen and (min-width:November) {
  .c0 {
    inset-block: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset-block: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset-block: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    inset-block: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  inset-block: July;
}

@media screen and (min-width:November) {
  .c0 {
    inset-block: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset-block: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset-block: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    inset-block: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  inset-block: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    inset-block: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset-block: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset-block: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    inset-block: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  inset-block: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    inset-block: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset-block: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset-block: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    inset-block: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`insetBlock renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    inset-block: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset-block: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset-block: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    inset-block: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    inset-block: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset-block: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset-block: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    inset-block: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    inset-block: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset-block: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset-block: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    inset-block: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    inset-block: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset-block: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inset-block: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    inset-block: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`insetBlock renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  inset-block: July;
}

@media May {
  .c0 {
    inset-block: August;
  }
}

@media April {
  .c0 {
    inset-block: September;
  }
}

@media January {
  .c0 {
    inset-block: November;
  }
}

@media April {
  .c0 {
    inset-block: August;
  }
}

@media June {
  .c0 {
    inset-block: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  inset-block: July;
}

@media May {
  .c0 {
    inset-block: August;
  }
}

@media April {
  .c0 {
    inset-block: September;
  }
}

@media January {
  .c0 {
    inset-block: November;
  }
}

@media April {
  .c0 {
    inset-block: August;
  }
}

@media June {
  .c0 {
    inset-block: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  inset-block: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    inset-block: November;
  }
}

@media April {
  .c0 {
    inset-block: January;
  }
}

@media January {
  .c0 {
    inset-block: December;
  }
}

@media April {
  .c0 {
    inset-block: April;
  }
}

@media June {
  .c0 {
    inset-block: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  inset-block: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    inset-block: November;
  }
}

@media April {
  .c0 {
    inset-block: January;
  }
}

@media January {
  .c0 {
    inset-block: December;
  }
}

@media April {
  .c0 {
    inset-block: April;
  }
}

@media June {
  .c0 {
    inset-block: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`insetBlock renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    inset-block: July;
  }
}

@media April {
  .c0 {
    inset-block: August;
  }
}

@media January {
  .c0 {
    inset-block: September;
  }
}

@media April {
  .c0 {
    inset-block: November;
  }
}

@media June {
  .c0 {
    inset-block: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    inset-block: July;
  }
}

@media April {
  .c0 {
    inset-block: August;
  }
}

@media January {
  .c0 {
    inset-block: September;
  }
}

@media April {
  .c0 {
    inset-block: November;
  }
}

@media June {
  .c0 {
    inset-block: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    inset-block: January;
  }
}

@media April {
  .c0 {
    inset-block: December;
  }
}

@media January {
  .c0 {
    inset-block: April;
  }
}

@media April {
  .c0 {
    inset-block: May;
  }
}

@media June {
  .c0 {
    inset-block: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    inset-block: January;
  }
}

@media April {
  .c0 {
    inset-block: December;
  }
}

@media January {
  .c0 {
    inset-block: April;
  }
}

@media April {
  .c0 {
    inset-block: May;
  }
}

@media June {
  .c0 {
    inset-block: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`insetBlock renders postitive number 1`] = `
Array [
  .c0 {
  inset-block: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  inset-block: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  inset-block: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  inset-block: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`insetBlock renders string 1`] = `
Array [
  .c0 {
  inset-block: July;
}

<div
    className="c0"
  />,
  .c0 {
  inset-block: July;
}

<div
    className="c0"
  />,
  .c0 {
  inset-block: June;
}

<div
    className="c0"
  />,
  .c0 {
  inset-block: June;
}

<div
    className="c0"
  />,
]
`;

exports[`insetBlock renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`insetBlock renders valid theme path 1`] = `
Array [
  .c0 {
  inset-block: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  inset-block: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  inset-block: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  inset-block: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
